--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
